--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #7045a5;
+      background-color: #f6f6ef;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #ffffff;
     }
